--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.62"
+        "phpunit/phpunit": "^12.0",
+        "symfony/browser-kit": "7.2.*",
+        "symfony/css-selector": "7.2.*",
+        "symfony/maker-bundle": "^1.62",
+        "symfony/phpunit-bridge": "^7.2"
     }
 }
